opam-version: "2.0"
name: "typedoc-plugin-repo-link"
authors: "James Lan"
homepage: "https://github.com/jameslan/typedoc-plugin-repo-link"
maintainer: "jameslan@gmail.com"
dev-repo: "git@github.com:jameslan/typedoc-plugin-repo-link.git"
bug-reports: "https://github.com/jameslan/typedoc-plugin-repo-link/issues"
version: "0.0.1"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml"
  "dune" {build}
  "melange" {build}
  "ocamlformat" {with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
]
